    - Added optional dependency on IR2 to prevent technology dependency cycles.
    - Made sure that the properties of huge entities (accumulator, solar farm etc.) are in sync with the amount of the normal entities they are made of.
    - Fixed a dependency circle when all of Angel's mods were used.


  Modding:
    - Migrated some recipes ("bi-sulfur-angels", "bi-crushed-stone-X", "bi-biomass-conversion-X", "bi-acid") and technologies ("bi-tech-bio-cannon", "bi-tech-advanced-fertilizers")
    - If your mod has items that should/shouldn't get a fuel value, you can pass on filters to BI. Please check BI's data.lua for an explanation! (There are already filters for some mods included in BI. If you're not happy with the presets for your mod, either provide a complete list with the filters you want, or overwrite the presets yourselves at runtime following the explanation in BI's data.lua!)

  Compatibility:
    - Recipe icons are now dynamic based on other mods icons, no need for custom icons.
    - Added support/icons for "Deadlock's Stacking Beltboxes & Compact Loaders" and "Deadlock's Crating Machine".
    - Added support for Brevven's "Silica & Silicon".
    - "Pyanodons Petroleum Handling" didn't reckon with changes to their recipes by other mods, so things done by BI would result in a crash for two recipes. Added patches for these recipes that should work once the dependency of "Pyanodons Coal Processing" on BI has been removed.
    - Removed or moved some recipes around used by boblogistics, bobplates, bobpower, bobrevamp, angels refining, angels petrochem, angels industries, Krastorio 2, Industrial Revolution 2.
    - Sometimes, we use our item icon, sometimes the mods ones, but now recipes are coherent.
    - Made Bobgreenhouse incompatible (redundant and breaks the balance of BI).

  Optimization:
    - Major code and file structure cleanup and factori(o)sation.
    - Made graphics and sounds a separate mod to avoid redownloads.
    - Added icon mipmaps.